--- a/Website/setout.css
+++ b/Website/setout.css
@@ -1,137 +1,137 @@
-.address{
+.address { /* indent the address details */
 	margin-left: 50px;
 	margin-top: 0px;
 	font-size: 120%
 }
-.fax {
+.fax { /* line up the fax number with the phone number */
 	padding-left: 25px;
 }
-h1 {
+h1 { /* colour h1 */
 	color: #000000;
 	text-shadow: 2px 1px orange;
 }
-#navigation  a{
+#navigation  li{ /* set out the navigation links */
 	background-color: yellow;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: 5px;
 	border: solid 2px purple;
-	margin-right: 0px;
+	margin-right: 10px;
 	border-radius: 10px;
+	list-style-type: none;
+	display: inline-block;
 }
-h2 {
+h2 { /* colour h2 */
 	text-color: blue;
 }
-body {
+body { /* set out look of the page background */
 	background-color: black;
-	background-image: url(./images/composite1.jpg);
+	background-image: url(./images/composite.jpg);
 	background-size: 850px;
 	color: #55ffbb;
 	min-width:950px;
 	background-repeat: no-repeat;
 	background-position: 370px 200px;
 }
-.highlight{
+.highlight{ /* set out highlighted text in announcements.html, guidelines.html */
 	color: #afeeee;
 }
-.indent {
+.indent { /* indent text */
 	margin-left: 30px;
-	font-size: 130%;
+	font-size: 120%;
 	width: 35%;
 }
-a:link {
-	color: yellow;
+#navigation a:visited{ /* make navigation visited link not change colour */
+	color: green;
 }
-a:hover{
-	background-color: orange;
-	color: blue;
-}
-a:active {
+#navigation a:hover{ /* make navigation link hover red */
 	color: red;
 }
-a:visited {
-	color: #3675c7;
+a:link { /* set link colour */
+	color: green;
 }
-#firstcolumn ul {
+a:hover{ /* make link hover red */
+	color: red;
+}
+#firstcolumn ul { /* position first column in price data */
 	position: absolute;
 	left: 0px;
 	top: 150px;
 	width: 200px;
 	margin-left: 50px;
-	
 }
-#secondcolumn  ul {
+#secondcolumn  ul { /* position second column in price data */
 	position: absolute;
 	left: 250px;
 	top: 150px;
 	width: 50px;
 	margin-left: 0px;
 }
-#thirdcolumn  ul {
+#thirdcolumn  ul { /* position 3rd column in price data */
 	position: absolute;
 	left: 300px;
 	top: 150px;
 	width: 70px;
 	margin-left: 0px;
 }
-#firstcolumn ul,  #secondcolumn  ul, #thirdcolumn  ul {
+#firstcolumn ul,  #secondcolumn  ul, #thirdcolumn  ul { /* set out ul common table display */
 	background-color: yellow;
 	list-style-type: none;
 	padding-left: 0px;
 	border: solid 1px blue;
 	color: black;
 }
-#firstcolumn li, #secondcolumn li, #thirdcolumn li{
+#firstcolumn li, #secondcolumn li, #thirdcolumn li{ /* set out li table display */
 	padding-left: 3px;
 	border: solid 1px blue;
 }
-.table1_heading {
+.table1_heading { /* set out table1 heading display */
 	padding-left: 50px;
 	font-size: 150%;
 	text-shadow: 2px 1px orange;
 }
-.table2_heading {
+.table2_heading { /* set out table2 heading display */
 	padding-left: 0px;
 	font-size: 150%;
 	text-shadow: 2px 1px orange;
 }
-.table3_heading {
+.table3_heading { /* set out table3 heading display */
 	padding-left: 5px;
 	font-size: 150%;
 	text-shadow: 2px 1px orange;
 }
-#button {
+#button { /* position prices back button */
 	position: absolute;
 	left: 30px;
 	top: 70px;
 }
-#button a:hover{
+#button a:hover{ /* make hover on prices button same as background */
 	background-color: black;
 }
-#heading {
+#heading { /* a Cossieplay headliner just below navigation links */
 	padding-top: 15px;
 	font-size: 180%;
 	color: black;
 	text-shadow: 2px 1px orange;
 }
-.lowlight {
-	font-size: 60%;
+.lowlight { /* more css for headliner */
+	font-size: 80%;
 	color: white;
 	text-shadow: none;
 	margin-left: 20px;
 }
-.underline{
+.underline{ /* more css for headliner */
 	border-bottom: solid 4px #55ffbb;
 	color: yellow;
 	text-shadow: none;
 	margin-left: 20px;
 }
-.description  {
+.description  { /*blocks of text in many pages */
 	margin-left: 20px;
 	min-width: 450px;
 	width: 50%;
 }
-.light{
+.light{ /* change some text in headliner */
 	color: yellow;
 	margin-left: 100px;
 	font-size: 110%;
@@ -144,27 +144,28 @@ a:visited {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-#scroll{
+#scroll{ /* add y scrollbar to text in home page */
 	height: 172px;
 	font-size: 120%;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	width: 500px;
 }
-#footer{
+#footer{ /* add copyright information to cosplay terminology in home page */ 
 	font-size: 130%;
 	margin-top: 90px;
-}.position{
+}
+.position{ /* position and size prices.html link */
 	position: absolute;
 	left: 150px;
-	top: 230px;
+	top: 260px;
 	font-size: 200%;
 }
-.end{
+.end{ /* css for last line on announcements.html */
 	padding-top: 20px;
 	font-size: 140%;
 	color: yellow;
 }
-.lead{
+.lead{ /* css for the lead words in the copyright information in home page */
 	color: yellow;
 }
