--- a/Website/setout1.css
+++ b/Website/setout1.css
@@ -1,65 +1,71 @@
-
-
-h1 {
+h1 { /* colour h1 */
 	color: #000000;
 	text-shadow: 2px 1px orange;
 }
-#navigation  a{
+#navigation  li{ /* set out the navigation links */
 	background-color: yellow;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: 5px;
 	border: solid 2px purple;
-	margin-right: 0px;
+	margin-right: 10px;
 	border-radius: 10px;
+	list-style-type: none;
+	display: inline-block;
 }
-
-body {
+body { /* set out look of the page background */
 	background-color: black;
 	background-image: url(./images/party.jpg);
 	background-size: 600px;
 	color: #55ffbb;
 	min-width:950px;
 	background-repeat: no-repeat;
-	background-position: 600px 150px;
+	background-position: 550px 150px;
 }
-
-.indent {
+.indent { /* indent text */
 	margin-left: 30px;
 	width: 35%;
 	min-width: 450px;
 	font-size: 120%;
 }
-
-
-#heading {
+#navigation a:visited{ /* make navigation visited link not change colour */
+	color: green;
+}
+#navigation a:hover{ /* make navigation link hover red */
+	color: red;
+}
+a:link{ /* set link colour */
+	color: green;
+}
+a:hover{ /* make link hover red */
+	color: red;
+}
+#heading { /* a Cossieplay headliner just below navigation links */
 	padding-top: 15px;
 	font-size: 180%;
 	color: black;
 	text-shadow: 2px 1px orange;
 }
-.lowlight {
-	font-size: 60%;
+.lowlight { /* more css for headliner */
+	font-size: 80%;
 	color: white;
 	text-shadow: none;
 	margin-left: 20px;
 }
-.underline{
+.underline{ /* more css for headliner */
 	border-bottom: solid 4px #55ffbb;
 	color: yellow;
 	text-shadow: none;
 	margin-left: 20px;
 }
-.description  {
-	position: absolute;
-	left: 30px;
-	top: 500px;
+.description  { /*blocks of text in many pages */
+	margin-left: 30px;
 	width: 35%;
 	min-width: 450px;
 	color: #f238d6;
 	font-size: 120%;
 }
-.light{
+.highlight{ /* change some text in headliner */
 	color: yellow;
 	margin-left: 100px;
 	font-size: 110%;
@@ -71,5 +77,4 @@ body {
 	min-width: 790px;
 	padding-left: 10px;
 	padding-right: 10px;
-	
 }
